# win32-software-renderer

./: CMakeLists.txt  README.md  main.c
include/: camera.h  colors.h  file_utils.h  geometry_utils.h  main.h  math_utils.h  model_loader.h  quaternion.h  scene.h  transform.h  vector_utils.c  vector_utils.h
src/: camera.c  file_utils.c  geometry_utils.c  math_utils.c  model_loader.c  quaternion.c  scene.c  transform.c  vector_utils.c
